<resources>
    <string name="app_name">PADC_Poc_Hotel_Booking_App_TTS</string>
    <string name="action_settings">Settings</string>
    <string name="tv_cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="Reset">Reset</string>
    <string name="sort_by">SORT BY</string>
    <string name="buttom_price"><![CDATA[Price $$>$$$]]></string>
    <string name="buttom_none">NONE</string>
    <string name="buttom_1">1</string>
    <string name="buttom_2">2</string>
    <string name="buttom_3">3</string>
    <string name="buttom_4">4</string>
    <string name="butttom_5">5</string>
    <string name="price_range">PRICE RANGE</string>
    <string name="buttom_search_now">searchnow</string>
    <string name="explore">Explore</string>
    <string name="filters">Filters</string>
    <string name="location">Location</string>
    <string name="dhaka">Dhaka</string>
    <string name="check_in">Check In</string>
    <string name="tv_date_in">07 Mar, 2019</string>
    <string name="check_out">Check out</string>
    <string name="tv_date_out">12 Mar, 2019</string>
    <string name="tv_2_adults">2 Adults</string>
    <string name="rooms">Rooms</string>
    <string name="tv_03">03</string>
    <string name="search_now">searchnow</string>
    <string name="top_searches">TOP SEARCHES</string>
    <string name="recent_searches">RECENT SEARCHES</string>
    <string name="tv_rating">4.5(21 ratings)</string>
    <string name="the_westeen">The Westeen</string>
    <string name="gulshan">Gulshan Circle 2. Dhaka</string>
</resources>
