<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet"
    android:background="#fff"
    app:behavior_hideable="false"
    app:behavior_peekHeight="40dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_cancel"
        android:text="@string/tv_cancel"
        android:textColor="@color/common_color"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_filter"
        android:text="@string/filter"
        android:textSize="20sp"
        android:textColor="@color/tv_black"
        android:textStyle="bold"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_reset"
        android:text="@string/Reset"
        android:textColor="@color/common_color"
        android:layout_marginLeft="340dp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_sort"
        android:text="@string/sort_by"
        android:textSize="15dp"
        android:textColor="@color/tv_black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/tv_filter"/>
    <!--<Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_filter"
        android:text="@string/buttom_price"
        android:drawableRight="@drawable/ic_arrow_drop_down_circle_black_24dp"
        android:layout_below="@+id/tv_sort"
        android:background="@drawable/mybutton"/>-->
    <Spinner
        android:id="@+id/btn_filter"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_sort"
        android:entries="@array/spinner"
        android:layout_marginLeft="10dp"
        >

    </Spinner>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_rating"
        android:text="RATING"
        android:textSize="15dp"
        android:textColor="@color/tv_black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_filter"/>

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6"
        android:id="@+id/ll_layout"
        android:layout_below="@+id/tv_rating">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/buttom_none"
            android:textSize="10sp"
            android:background="@drawable/mybutton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_star_yellow_24dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/buttom_1"
            android:background="@drawable/mybutton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_star_yellow_24dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/buttom_2"
            android:background="@drawable/mybutton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_star_yellow_24dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/buttom_3"
            android:background="@drawable/mybutton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_star_yellow_24dp"
            android:gravity="center"
            android:padding="8dp"
            android:backgroundTint="@color/common_color"
            android:text="@string/buttom_4"
            android:background="@drawable/mybutton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_star_yellow_24dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/butttom_5"
            android:background="@drawable/mybutton"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_price_rate"
        android:text="@string/price_range"
        android:textSize="15dp"
        android:textColor="@color/tv_black"
        android:layout_below="@+id/ll_layout"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        />

    <ImageView
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:id="@+id/img_price_range"
        android:src="@drawable/download"
        android:layout_below="@+id/tv_price_rate"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        />

    <Button
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:id="@+id/btn_search"
        android:text="@string/search_now"
        android:textColor="@color/button_color"
        android:layout_below="@+id/img_price_range"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/common_color"
        android:layout_marginBottom="10dp"/>
    <ImageButton
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:id="@+id/btn_three"
        android:layout_below="@+id/img_price_range"
        android:layout_toEndOf="@+id/btn_search"
        android:backgroundTint="@color/common_color"
        android:src="@drawable/ic_map_black_24dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/bg_button"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>