<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:nestedScrollingEnabled="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_explore"
            android:text="@string/explore"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/tv_black"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_filters"
            android:text="@string/filters"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_local_bar_black_24dp"
            android:backgroundTint="@color/button_color"
            android:background="@drawable/bg_button"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/btn_filters">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_input_one"
                    android:hint="Location"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    app:boxStrokeColor="@android:color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_add_location_black_24dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@id/tv_input_one"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_input_two"
                    android:hint="Check In"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="7dp"
                    app:boxStrokeColor="@android:color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@id/tv_input_one"
                    android:layout_toEndOf="@+id/tv_input_two"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_input_three"
                    android:hint="Check Out"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="7dp"
                    app:boxStrokeColor="@android:color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@id/tv_input_two"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_input_four"
                    android:hint="Count"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="7dp"
                    app:boxStrokeColor="@android:color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@id/tv_input_three"
                    android:layout_toEndOf="@+id/tv_input_four"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_input_five"
                    android:hint="Rooms"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="7dp"
                    app:boxStrokeColor="@android:color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>



                <Button
                    android:layout_width="290dp"
                    android:layout_height="60dp"
                    android:id="@+id/btn_search"
                    android:text="@string/search_now"
                    android:textColor="@color/button_color"
                    android:layout_below="@+id/tv_input_four"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_button"
                    android:backgroundTint="@color/common_color"/>
                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:id="@+id/btn_three"
                    android:layout_below="@id/tv_input_five"
                    android:layout_toEndOf="@+id/btn_search"
                    android:backgroundTint="@color/common_color"
                    android:src="@drawable/ic_map_black_24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/bg_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_search"
                    android:layout_below="@+id/btn_search"
                    android:text="@string/top_searches"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="10dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_search"
                    android:id="@+id/rvTwo"
                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rvEventTwo">

                    </androidx.recyclerview.widget.RecyclerView>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_recent"
                    android:text="@string/recent_searches"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/rvTwo"
                    android:textSize="15sp"
                    android:textColor="@color/tv_black"
                    android:layout_marginLeft="10dp"/>
            </RelativeLayout>
        </ScrollView>
        <!--homework-->





    </RelativeLayout>


    <include layout="@layout/buttom_sheet_one"/>

</LinearLayout>